# clax

./: .gitignore  AGENT_PROMPT.md  CHANGELOG.md  CLASS-PT.md  CLAUDE.md  DESIGN.md  LICENSE  PROGRESS.md  README.md  clax-PT.md  pyproject.toml  report.md  supervision.md
.claude/: ralph-loop.local.md
clax/: __init__.py  background.py  bessel.py  constants.py  distortions.py  ept.py  harmonic.py  interpolation.py  lensing.py  nonlinear.py  ode.py  params.py  perturbations.py  primordial.py  rosenbrock.py  shooting.py  thermodynamics.py  transfer.py
diags/: README.md  diag_cl_comprehensive.py  diag_cl_fast_v2.py  diag_class_xe_oracle.py  diag_ncdm_perturbations.py  diag_ncdm_shear_convergence.py  diag_pert_vars.py  diag_pk_accuracy.py  diag_source_decomp_v2.py  timing_test.py
docs/: CLASS-PT-summary.md  FFTLog_PT.md  classpt_reference_table.npz  clax-pt.md  clax-pt_human_revision.md
figures/: jaxclass_spectra.npz  jaxclass_spectra_h100.npz
jaxclass/: __init__.py  background.py  bessel.py  constants.py  distortions.py  harmonic.py  interpolation.py  lensing.py  nonlinear.py  ode.py  params.py  perturbations.py  primordial.py  shooting.py  thermodynamics.py  transfer.py
loop_logs/: claude_gpu_37478402.out  claude_gpu_37478591.out  gpu_backend_37474473.out  slurm_37468331.out  slurm_37468521.out  slurm_37468882.out  slurm_37469206.out  slurm_37469543.out  slurm_37469657.out  test2_direct.out
notebooks/: pm_mm_validation.ipynb
reference_data/: classpt_clpp_halofit.npz  classpt_z0.38_fullrange.npz  classpt_z0.6.npz  cls_all_massless.npz  cls_class_modes.npz  (+1 more)
(+196 files in other folders)
